--- a/webconsole/src/main/resources/templates/services.html
+++ b/webconsole/src/main/resources/templates/services.html
@@ -36,6 +36,7 @@ var data = ${__data__};
 	<thead>
 		<tr>
 			<th class="col_Id">${id}</th>
+			<th class="col_Ranking">${ranking}</th>
 			<th class="col_Types">${type_s}</th>
 			<th class="col_Bundle">${bundle}</th>
 		</tr>
@@ -45,6 +46,7 @@ var data = ${__data__};
 			<td>
 				<div class="bIcon ui-icon ui-icon-triangle-1-e" style="float:left" title="${services.details.tip}">&nbsp;</div>
 			</td>
+			<td>&nbsp;</td><!-- ranking -->
 			<td>&nbsp;</td><!-- type -->
 			<td>&nbsp;</td><!-- bundle -->
 		</tr>
