FELIX-5223 : [IE11][Edge]: Fields in OSGI Configuration Manager are not editable. Apply patch from Ana Vinatoru
git-svn-id: https://svn.apache.org/repos/asf/felix/trunk@1744519 13f79535-47bb-0310-9956-ffa450edef68

--- a/webconsole/src/main/resources/res/ui/config.css
+++ b/webconsole/src/main/resources/res/ui/config.css
@@ -38,3 +38,33 @@ span.default_value {
 }
 td.col_Exists_body div.ui-icon { margin-left:auto; margin-right: auto }
 input.placeholder-active { color: #AAA !important }
+
+.minHeightTextarea {
+	min-height: 1.22em;
+}
+
+.noPaddingLeft {
+	padding-left: 0em !important;
+}
+
+.configDescription {
+	padding: 0 0 1em 0 !important;
+}
+
+.minWidthCell {
+	padding-top: 0.5em !important;
+	min-width: 10em;
+}
+
+.paddedCell {
+	padding-top: 0.5em !important;
+	padding-bottom: 0.5em !important;
+}
+
+.topPaddedText {
+	padding-top: 0.4em !important;
+}
+
+.iconMarginTop {
+	margin-top: .25em;
+}
